# VBmix

./: DESCRIPTION  MD5  NAMESPACE  README  configure  configure.ac
R/: RGBtoLab.R  Rutils.R  classicEM.R  displayScatter.R  interfaces.R
data/: VBmix.RData  datalist
inst/doc/: old_manual.bib  old_manual.tex
inst/socket/: sockserver.cpp
man/: EM.Rd  RGBtoLab.Rd  Rdct.Rd  Rdct2D.Rd  RinvDct2D.Rd  ZtoLabels.Rd  appendToGmm.Rd  appendToList.Rd  appendToMppca.Rd  binnedEntropy.Rd  buildFrame.Rd  circlegen.Rd  classicEM.Rd  constrClassif.Rd  covgen.Rd  dDirichlet.Rd  dat1sample.Rd  dat2sample.Rd  dat3sample.Rd  datagen.Rd  displayGraph.Rd  displayNnet.Rd  displaySVM.Rd  displayScatter.Rd  eigenMppca.Rd  extractSimpleModel.Rd  gaussianKL.Rd  gdist.Rd  generate2Dtransform.Rd  generateSparsePoints.Rd  getBic.Rd  getColor.Rd  getCouple.Rd  getDataLikelihood.Rd  getElapsed.Rd  getLabels.Rd  getQforComp.Rd  getResp.Rd  getTimestamp.Rd  getVarbayesResp.Rd  (+64 more)
socket/: Makefile  sockclient.cpp
src/: EM.c  EM.h  VBmix_init.c  config.h  config.h.win  couple.c  dirichlet.c  getLabels.c  gmmkmsock.cpp  knn.c  mkmeans.c  mkmeans.h  mmppca.c  mmppca.h  mppca.cpp  mppca.h  parsers.c  parsers.h  readDataFile.cpp  test.c  test.h  utils.c  utils.h  varbayes.c  varbayes.h  vbcomp.c  vbcomp.h  vbconstr.c  vbconstr.h
